// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> Should match snapshot With number 1`] = `
.c0 {
  display: inline-block;
  margin-left: 8px;
  margin-right: 8px;
}

.c1 {
  border-radius: 8px;
  display: inline-block;
  font-size: 12px;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  min-width: 20px;
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

<div
  className="c0"
  value={10}
>
  <span
    className="c1"
    value={10}
  >
    10
  </span>

</div>
`;

exports[`<Badge /> Should match snapshot with children 1`] = `
.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  border-radius: 8px;
  display: inline-block;
  font-size: 12px;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  min-width: 20px;
  text-align: center;
  padding-left: 2px;
  padding-right: 2px;
  position: absolute;
  right: -10px;
  top: -10px;
  background-color: #f2f2f2;
  color: #4c4c4c;
}

.c2 {
  border-radius: 4px;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  padding: 0 12px;
  height: 40px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  cursor: pointer;
  background-color: #1355d0;
  border: 1px solid #1355d0;
  color: #FFFFFF;
  font-weight: 500;
  box-shadow: 0 2px 5px rgba(92,116,130,0.3);
}

.c2 .c3 {
  font-size: 24px;
}

.c2:active {
  box-shadow: 0 2px 6px rgba(92,116,130,0.6);
  background-color: #002f7b;
  border-color: #002f7b;
  color: #FFFFFF;
}

<div
  className="c0"
  value={10}
>
  <span
    className="c1"
    value={10}
  >
    10
  </span>
  <button
    className="c2"
    disabled={false}
    onClick={[Function]}
    size="medium"
    type="button"
  >

    Catho
  </button>
</div>
`;
